--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "devDependencies": {},
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon -r dotenv/config app.js",
     "create": "node -r dotenv/config ./db/scripts/createTable.js",
     "db:createTable": "node -r dotenv/config ./db/scripts/createTable.js",
     "db:populateTable": "node -r dotenv/config ./db/scripts/populateTable.js",
