--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "dev": "nodemon -r dotenv/config app.js",
     "create": "node -r dotenv/config ./db/scripts/createTable.js",
     "db:createTable": "node -r dotenv/config ./db/scripts/createTable.js",
     "db:populateTable": "node -r dotenv/config ./db/scripts/populateTable.js",
     "db:deleteTable": "node -r dotenv/config ./db/scripts/deleteTable.js",
-    "db:deleteAllTables": "node -r dotenv/config ./db/scripts/deleteAllTables.js"
+    "db:deleteAllTables": "node -r dotenv/config ./db/scripts/deleteAllTables.js",
+    "test": "node -r dotenv/config --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3"
   }
 }
