--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:populateTable": "node -r dotenv/config ./db/scripts/populateTable.js",
     "db:deleteTable": "node -r dotenv/config ./db/scripts/deleteTable.js",
     "db:deleteAllTables": "node -r dotenv/config ./db/scripts/deleteAllTables.js",
+    "email": "node -r dotenv/config ./db/scripts/deleteMyEmail.js",
     "test": "node -r dotenv/config --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
